@@ -84,6 +84,7 @@ import haxe.remoting.SocketWrapper;
 import haxe.rtti.Infos;
 import haxe.rtti.Type;
 import haxe.rtti.XmlParser;
+import haxe.rtti.Generic;
 
 import haxe.xml.Check;
 import haxe.xml.Fast;
@@ -99,6 +100,7 @@ import haxe.unit.TestStatus;
 // generated by haxe
 import flash.Boot;
 import flash.Lib;
+import flash.FastList;
 import flash.FlashXml__;
 import flash.accessibility.Accessibility;
 import flash.accessibility.AccessibilityImplementation;
@@ -311,6 +313,7 @@ import flash.system.Security;
 // generated by haxe
 import flash9.Boot;
 import flash9.Lib;
+import flash9.FastList;
 import flash9.FlashXml__;
 import flash9.accessibility.Accessibility;
 import flash9.accessibility.AccessibilityImplementation;
