@@ -1,6 +1,8 @@
 2008-??-??: 1.19
 	fixed flash9 Array.toString
 	fixed inline return bug
+	added haxe.rtti.Generic behavior
+	added flash9.FastList
 	TODO haxe/f9 : inline code can give bad file in debug infos
 	TODO haxe/f9 var x = if( true ) Math.POSITIVE_INFINITY : 0.; VerifyError
 
